# TicTacToe_SFML

./: CMakeLists.txt  README.md  definitions.h  functions.cpp  functions.h  main.cpp  sprites.cpp  sprites.h
classes/: CircleSprite.cpp  CircleSprite.h  CrossSprite.cpp  CrossSprite.h  Sprites.cpp  Sprites.h
